; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/mockfs/extr_mockfs_vnops.c_mockfs_read.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/mockfs/extr_mockfs_vnops.c_mockfs_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnop_read_args = type { i32, i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64, i64 }
%struct.TYPE_5__ = type { i32 }

@VREG = common dso_local global i64 0, align 8
@ENOTSUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mockfs_read(%struct.vnop_read_args* %0) #0 {
  %2 = alloca %struct.vnop_read_args*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  store %struct.vnop_read_args* %0, %struct.vnop_read_args** %2, align 8
  %6 = load %struct.vnop_read_args*, %struct.vnop_read_args** %2, align 8
  %7 = getelementptr inbounds %struct.vnop_read_args, %struct.vnop_read_args* %6, i32 0, i32 2
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %4, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %12, %struct.TYPE_5__** %5, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @VREG, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %30

18:                                               ; preds = %1
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %20 = load %struct.vnop_read_args*, %struct.vnop_read_args** %2, align 8
  %21 = getelementptr inbounds %struct.vnop_read_args, %struct.vnop_read_args* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.vnop_read_args*, %struct.vnop_read_args** %2, align 8
  %27 = getelementptr inbounds %struct.vnop_read_args, %struct.vnop_read_args* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @cluster_read(%struct.TYPE_4__* %19, i32 %22, i32 %25, i32 %28)
  store i32 %29, i32* %3, align 4
  br label %32

30:                                               ; preds = %1
  %31 = load i32, i32* @ENOTSUP, align 4
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %30, %18
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @cluster_read(%struct.TYPE_4__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
